--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,10 +15,13 @@
     </nav>
   </header>
   <main>
-    <h2>Services</h2>
-    <div id="services"></div>
+     <section id="action-section">
     <h3>Last Action Output</h3>
     <pre class="log" id="output">(no actions yet)</pre>
+  </section>
+    <h2>Services</h2>
+    <div id="services"></div>
+    
   </main>
   <script src="js/utils.js"></script>
   <script src="js/services.js"></script>
