--- a/frontend/logs.html
+++ b/frontend/logs.html
@@ -5,7 +5,7 @@
   <title>Service Logs</title>
   <link rel="stylesheet" href="css/styles.css" />
 </head>
-<body>
+<body class="logs-page">
   <header>
     <h1>Service Logs</h1>
     <nav>
