--- a/frontend/logs.html
+++ b/frontend/logs.html
@@ -17,34 +17,33 @@
   </header>
 
   <main>
-    <h2 id="log-title">Logs</h2>
+    <h2>Logs</h2>
 
     <div class="field-group">
-      <label for="service-select">Service</label>
+      <label>Service</label>
       <select id="service-select"></select>
     </div>
 
     <div class="field-group">
-      <label for="log-files">Log file</label>
+      <label>Log file</label>
       <select id="log-files"></select>
     </div>
 
     <button class="btn btn-secondary" onclick="loadLog()">Load Log</button>
 
-    <!-- ------------------------------------------------------ -->
-    <!-- LOG VIEWER HEADER (Wrap / Maximize integrated)         -->
-    <!-- ------------------------------------------------------ -->
-    <div id="log-view-header">
-      <span>Log Output</span>
+    <div id="log-viewer">
+      <div id="log-toolbar">
+        <span class="log-title">Log Output</span>
 
-      <div id="log-view-controls">
-        <button class="icon-btn" id="wrap-toggle">Wrap</button>
-        <button class="icon-btn" id="maximize-toggle">Maximize</button>
+        <div class="log-actions">
+          <button class="icon-btn" id="wrap-toggle">Wrap</button>
+          <button class="icon-btn" id="clear-log">Clear</button>
+          <button class="icon-btn" id="maximize-toggle">Maximize</button>
+        </div>
       </div>
-    </div>
 
-    <!-- LOG CONTENT AREA -->
-    <pre class="log" id="log-content">(no log loaded)</pre>
+      <pre id="log-content" class="log-body">(no log loaded)</pre>
+    </div>
   </main>
 
   <script src="js/utils.js"></script>
