--- a/frontend/logs.html
+++ b/frontend/logs.html
@@ -17,20 +17,30 @@
   </header>
 
   <main>
-    <h2>Logs</h2>
+    <h2 class="page-title">Logs</h2>
 
-    <div class="field-group">
-      <label>Service</label>
-      <select id="service-select"></select>
+    <!-- Single Row Controls -->
+    <div class="log-controls">
+      <div class="log-controls-row">
+
+        <div class="control-row">
+          <label for="service-select">Service</label>
+          <select id="service-select"></select>
+        </div>
+
+        <div class="control-row">
+          <label for="log-files">Log File</label>
+          <select id="log-files"></select>
+        </div>
+
+        <button id="load-log-btn" class="btn btn-primary" onclick="loadLog()">
+          Load Log
+        </button>
+
+      </div>
     </div>
 
-    <div class="field-group">
-      <label>Log file</label>
-      <select id="log-files"></select>
-    </div>
-
-    <button class="btn btn-secondary" onclick="loadLog()">Load Log</button>
-
+    <!-- Log Viewer -->
     <div id="log-viewer">
       <div id="log-toolbar">
         <span class="log-title">Log Output</span>
@@ -44,6 +54,7 @@
 
       <pre id="log-content" class="log-body">(no log loaded)</pre>
     </div>
+
   </main>
 
   <script src="js/utils.js"></script>
