--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -6,14 +6,16 @@
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
-  <header>
-    <h1>Service Manager Admin</h1>
-    <nav>
-      <a href="index.html">Dashboard</a>
-      <a href="logs.html">Logs</a>
-      <a href="admin.html">Admin</a>
-    </nav>
-  </header>
+  <header class="top-header">
+  <div class="header-left">
+    <h1>Service Manager</h1>
+  </div>
+  <nav class="header-nav">
+    <a href="index.html">Dashboard</a>
+    <a href="logs.html">Logs</a>
+    <a href="admin.html">Admin</a>
+  </nav>
+</header>
   <main>
     <h2>Service Metadata</h2>
     <p>Use this page to edit the metadata JSON that defines all services. Be careful: invalid JSON will break the backend.</p>
