--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,14 +6,16 @@
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
-  <header>
+  <header class="top-header">
+  <div class="header-left">
     <h1>Service Manager</h1>
-    <nav>
-      <a href="index.html">Dashboard</a>
-      <a href="logs.html">Logs</a>
-      <a href="admin.html">Admin</a>
-    </nav>
-  </header>
+  </div>
+  <nav class="header-nav">
+    <a href="index.html">Dashboard</a>
+    <a href="logs.html">Logs</a>
+    <a href="admin.html">Admin</a>
+  </nav>
+</header>
   <main id="dashboard-layout">
     <!-- Left Side: Services Column -->
     <div id="services-column">
