--- a/frontend/logs.html
+++ b/frontend/logs.html
@@ -7,14 +7,16 @@
 </head>
 
 <body class="logs-page">
-  <header>
-    <h1>Service Logs</h1>
-    <nav>
-      <a href="index.html">Dashboard</a>
-      <a href="logs.html">Logs</a>
-      <a href="admin.html">Admin</a>
-    </nav>
-  </header>
+  <header class="top-header">
+  <div class="header-left">
+    <h1>Service Manager</h1>
+  </div>
+  <nav class="header-nav">
+    <a href="index.html">Dashboard</a>
+    <a href="logs.html">Logs</a>
+    <a href="admin.html">Admin</a>
+  </nav>
+</header>
 
   <main>
     <h2 class="page-title">Logs</h2>
